--- a/_betterize.sass
+++ b/_betterize.sass
@@ -343,7 +343,7 @@ table
   vertical-align: middle
   border-spacing: 0
   border-collapse: collapse
-  border-color: currentcolor
+  border-color: currentColor
   text-indent: 0
   font-variant-numeric: tabular-nums
 
@@ -370,8 +370,26 @@ hr
   height: 0
   padding: 0
   border: 0
-  border-top: 2px solid currentcolor
+  border-top: 2px solid currentColor
   margin: 1em 0
+  color: inherit
+
+// If you do not like the look of the modified <hr> above, and you want a more
+// basic horizontal rule without having to overwrite styling yourself, use the
+// `hr-light` class.
+// 1. Show overflow in legacy Edge and IE.
+// 2. Correct box-sizing in Firefox.
+// 3. Correct the inheritance of border-color in Firefox.
+//    See: (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
+
+.hr-light
+  // 1
+  overflow: visible
+  // 2
+  box-sizing: content-box
+  // 1
+  height: 0
+  // 3
   color: inherit
 
 // Add the correct font style in Android 4.3-
@@ -741,7 +759,7 @@ svg:not(:root)
   overflow: hidden
 
 svg:not([fill])
-  fill: currentcolor
+  fill: currentColor
 
 
 ////////////////////////////////////////////////////////////////////////////////
