--- a/_betterize.sass
+++ b/_betterize.sass
@@ -101,7 +101,7 @@ html
     'Apple Color Emoji',
     'Segoe UI Emoji',
     'Segoe UI Symbol',
-    'Noto Color Emoji'; // 3
+    'Noto Color Emoji'
   // 4
   font-size: 1em
   // 5
