--- a/_print.sass
+++ b/_print.sass
@@ -1,12 +1,12 @@
 ////////////////////////////////////////////////////////////////////////////////
-///                                                                          ///
-/// #PRINT STYLES -- version 1.2.4 -- 03/17/2024                             ///
-///                                                                          ///
+/// ------------------------------------------------------------------------ ///
+/// #PRINT STYLES -- ver. 1.2.4 -- 03/17/2024 ------------------------------ ///
+/// ------------------------------------------------------------------------ ///
 /// Append these styles to the bottom of your stylesheet and make any        ///
 /// changes necessary to your project from there. Minimizing the total       ///
-/// number of linked CSS files is recommended for reducing page load         ///
-/// speed, as it reduces the total quantity of HTTP requests.                ///
-///                                                                          ///
+/// number of linked CSS files is recommended for reducing page load speed   ///
+/// as it minimizes the amount of HTTP requests.                             ///
+/// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
 @media print
