--- a/_betterize.scss
+++ b/_betterize.scss
@@ -4,7 +4,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize.scss -- Modern normalization for better cross-browser design - ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 1.3.0 -- 03/21/2024 -------------------------------------------- ///
+/// version 1.3.1 -- 03/21/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -476,7 +476,7 @@ caption {
 // and inherits the color of the parent element's text so that it looks good
 // by default on all background colors.
 
-hr {
+hr:not(.hr-light) {
   display: block;
   overflow: hidden;
   -webkit-box-sizing: content-box;
@@ -510,8 +510,6 @@ hr {
 // Add the correct font style in Android 4.3-
 
 cite,
-i,
-em,
 var,
 dfn {
   font-style: italic;
