--- a/betterize.css
+++ b/betterize.css
@@ -4,7 +4,7 @@
 /* --------------------------------------------------------------------------- /
 /* betterize.css -- Modern normalization for better cross-browser design ----- /
 /* @author Stephen M Irving -- <@metric_dev> --------------------------------- /
-/* version 1.3.0 -- 03/21/2024 ----------------------------------------------- /
+/* version 1.3.1 -- 03/21/2024 ----------------------------------------------- /
 /* --------------------------------------------------------------------------- /
 /* ////////////////////////////////////////////////////////////////////////// */
 
@@ -522,7 +522,7 @@ caption {
  * by default on all background colors.
  */
 
-hr {
+hr:not(.hr-light) {
   display: block;
   overflow: hidden;
   -webkit-box-sizing: content-box;
@@ -559,8 +559,6 @@ hr {
 /* Add the correct font style in Android 4.3- */
 
 cite,
-i,
-em,
 var,
 dfn {
   font-style: italic;
