--- a/_betterize.sass
+++ b/_betterize.sass
@@ -1,10 +1,10 @@
-@charset "UTF-8";
+@charset "UTF-8"
 
 ////////////////////////////////////////////////////////////////////////////////
 /// ------------------------------------------------------------------------ ///
 /// betterize.sass -- Modern normalization for better cross-browser design - ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 1.3.1 -- 03/21/2024 -------------------------------------------- ///
+/// version 1.3.2 -- 03/21/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -788,7 +788,7 @@ legend
   width: 100%
   max-width: 100%
   padding: 0
-  margin-bottom: 0.36364em;
+  margin-bottom: 0.36364em
   margin-bottom: 0.5rem
   margin-block-end: 0.5rem
   color: inherit
