--- a/_betterize.scss
+++ b/_betterize.scss
@@ -4,7 +4,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize.scss -- Modern normalization for better cross-browser design - ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 2.0.2 -- 03/24/2024 -------------------------------------------- ///
+/// version 2.0.3 -- 03/25/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -224,7 +224,7 @@ body {
 
 article, aside, dialog, figcaption, figure,
 footer, header, hgroup, main, nav, section,
-canvas, details, summary, legend, img, svg, video {
+canvas, details, legend, img, svg, video {
   display: block;
 }
 
