--- a/betterize.css
+++ b/betterize.css
@@ -4,7 +4,7 @@
 /* --------------------------------------------------------------------------- /
 /* betterize.css -- Modern normalization for better cross-browser design ----- /
 /* @author Stephen M Irving -- <@metric_dev> --------------------------------- /
-/* version 2.0.2 -- 03/24/2024 ----------------------------------------------- /
+/* version 2.0.3 -- 03/25/2024 ----------------------------------------------- /
 /* --------------------------------------------------------------------------- /
 /* ////////////////////////////////////////////////////////////////////////// */
 
@@ -246,7 +246,7 @@ body {
 
 article, aside, dialog, figcaption, figure,
 footer, header, hgroup, main, nav, section,
-canvas, details, summary, legend, img, svg, video {
+canvas, details, legend, img, svg, video {
   display: block;
 }
 
